--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="chain-import-modal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
